Revert "fix: reduce layout shifts caused by scrollbars"
This reverts commit d3f7d3e1633c378765cdd382ff741fec7366c044.

--- a/src/app.scss
+++ b/src/app.scss
@@ -15,10 +15,6 @@
 }
 
 @layer components {
-  html {
-    scrollbar-gutter: stable;
-  }
-
   body {
     @apply font-sans flex justify-center bg-gray-200 dark:bg-gray-700 outline-none;
   }
